<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnBass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPause"
        android:layout_width="139dp"
        android:layout_height="89dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="75dp"
        android:text="@string/pause_btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnStore"
        app:layout_constraintStart_toEndOf="@+id/btnSettings"
        app:layout_constraintTop_toBottomOf="@+id/btnDrums" />

    <Button
        android:id="@+id/btnStore"
        android:layout_width="130dp"
        android:layout_height="89dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="100dp"
        android:text="@string/store_btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPause"
        app:layout_constraintTop_toBottomOf="@+id/lblBpm" />

    <TextView
        android:id="@+id/lblBpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BPM_lbl_txt"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/lblScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_lbl_txt"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="131dp"
        android:layout_height="89dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="100dp"
        android:text="@string/settings_btn_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblScore" />

    <Button
        android:id="@+id/btnDrums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="294dp"
        android:text="@string/drum_btn_txt"
        app:layout_constraintBottom_toTopOf="@+id/btnPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="37dp"
        android:text="@string/bass_btn_txt"
        app:layout_constraintBottom_toTopOf="@+id/btnDrums"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="178dp"
        android:text="@string/guitar_btn_txt"
        app:layout_constraintBottom_toTopOf="@+id/btnPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDrums" />

</androidx.constraintlayout.widget.ConstraintLayout>